--- a/css/master.css
+++ b/css/master.css
@@ -86,6 +86,28 @@ header a {
 	margin: 1.5em 0;
 }
 
+/* HAMBURGER MODAL*/
+.hamburger_modal {
+	width: 100vw;
+	height: 100vh;
+	position: absolute;
+	top: 0;
+	left: 0;
+	color: #fff;
+	fill: #fff;
+}
+
+.hamburger_modal .container {
+	width: 100%;
+	height: 100vh;
+	background: #152F45;
+	margin: 0 auto;
+	padding: 2em;
+}
+
+.close_modal {
+	float: right;
+}
 /* TEMPORAL CODE*/
 main {
 	text-align: center;
