--- a/css/responsive.css
+++ b/css/responsive.css
@@ -34,6 +34,21 @@
 }
 
 /* ABOVE 500PX */
+@media screen and (min-width: 550px) {
+	.upper_footer p {
+		font-size: 20px;
+		line-height: 28px;
+		letter-spacing: 2px;
+		max-width: 500px;
+	}
+	
+	.profile > div:nth-child(n+2),
+	.upper_footer > div:nth-child(n+2) {
+		align-self: center;
+
+	}
+}
+
 @media screen and (min-width: 600px) {
 	.business_info {
 		flex-direction: row;
@@ -77,6 +92,41 @@
 		font-weight: bold;
 		font-size: 18px;
 	}
+}
+
+@media screen and (min-width: 900px) {
+	.flex_med {
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: space-around;
+	}
+
+	.upper_footer > div {
+		width: 40%;
+	}
+
+	.upper_footer p {
+		font-size: 18px;
+	}
+
+	.lower_footer {
+		display: flex;
+		flex-direction: row-reverse;
+	}
+	
+	.lower_footer > div:last-child {
+		margin-top: 2em;
+	}
+
+	.lower_footer nav {
+		width: 100%;
+	}
+
+	.lower_footer nav a {
+		padding-right: 1em;
+		margin-left: 1em
+	}
+
 }
 
 @media screen and (min-width: 1100px) {
