add background image

--- a/css/master.css
+++ b/css/master.css
@@ -95,9 +95,15 @@ a {
 
 /* SUBSCRIBE */
 #subscribe {
-	background: #152F45;
+	background: ;
 	color: #fff;
 	padding: 1em;
+	background-image: linear-gradient(
+    to bottom,
+    rgba(21,47,69, 0.9),
+    rgba(21,47,69, 1)
+  ), url(../images/gripsense_repair.jpg);
+	#152F45;
 }
 
 #subscribe h2 {
