--- a/css/master.css
+++ b/css/master.css
@@ -93,6 +93,49 @@ a {
 
 /* MAIN */
 
+/* SHOWCASE */
+#showcase {
+	/*height: 400px;*/
+}
+
+
+
+.showcase {
+	/*background: url(../images/technician.png);*/
+	/*background: linear-gradient(to bottom, rgba(0,0,0, 0.5), rgba(21,47,69, 0.5));*/	
+	color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 400px;
+	letter-spacing: 1px;
+	padding: 1em;
+	font-size: 18px;
+}
+
+.showcase h2 {
+	font-size: 40px;
+	line-height: 50px;
+}
+
+.slider_one {
+	background: linear-gradient(to bottom, rgba(0,0,0, 0.7), rgba(21,47,69, 0.8)), url(../images/technician.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.slider_two {
+	background-image: linear-gradient(to bottom, rgba(0,0,0, 0.7), rgba(21,47,69, 0.8)), url(../images/news-1.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.slider_three {
+	background: linear-gradient(to bottom, rgba(0,0,0, 0.7), rgba(21,47,69, 0.8)), url(../images/news-2.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 /* SUBSCRIBE */
 #subscribe {
 	background: ;
@@ -362,7 +405,10 @@ hr {
 main {
 	text-align: center;
 	margin: 4em 0;
-	height: 50vh;
+}
+
+.soon {
+	margin: 4em 0;
 }
 
 /*Colors*/
