--- a/css/master.css
+++ b/css/master.css
@@ -115,23 +115,27 @@ a {
 
 .showcase h2 {
 	font-size: 40px;
-	line-height: 50px;
+	line-height: 60px;
+}
+
+.showcase span {
+	color: #00bfa5;
 }
 
 .slider_one {
-	background: linear-gradient(to bottom, rgba(0,0,0, 0.7), rgba(21,47,69, 0.8)), url(../images/technician.png);
+	background: linear-gradient(to bottom, rgba(0,0,0, 0.7), rgba(21,47,69, 0.8)), url(../images/news-1.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 
 .slider_two {
-	background-image: linear-gradient(to bottom, rgba(0,0,0, 0.7), rgba(21,47,69, 0.8)), url(../images/news-1.jpg);
+	background-image: linear-gradient(to bottom, rgba(0,0,0, 0.7), rgba(21,47,69, 0.8)), url(../images/news-2.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
 
 .slider_three {
-	background: linear-gradient(to bottom, rgba(0,0,0, 0.7), rgba(21,47,69, 0.8)), url(../images/news-2.jpg);
+	background: linear-gradient(to bottom, rgba(0,0,0, 0.7), rgba(21,47,69, 0.8)), url(../images/technician.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
