--- a/css/responsive.css
+++ b/css/responsive.css
@@ -35,6 +35,14 @@
 
 /* ABOVE 500PX */
 @media screen and (min-width: 550px) {
+	.services_range > .text h2 {
+		font-size: 35px;
+	}
+
+	.services_range > .text p {
+		font-size: 20px;
+	}
+
 	.upper_footer p {
 		font-size: 20px;
 		line-height: 28px;
@@ -56,7 +64,16 @@
 
 	.showcase h2 {
 		font-size: 45px;
-	line-height: 70px;
+		line-height: 70px;
+	}
+
+	[class^=sellingpoint_] svg {
+		width: 35px;
+		height: 35px;
+	}
+
+	[class^=sellingpoint_] p {
+		font-size: 24px;
 	}
 
 	#subscribe input {
@@ -85,18 +102,29 @@
 	letter-spacing: 2px;
 	}
 
+	[class^=sellingpoint_] svg {
+		width: 40px;
+		height: 40px;
+	}
+
+	[class^=sellingpoint_] p {
+		font-size: 26px;
+	}
+
 	#subscribe input {
 		height: 50px;
 	}
 	#subscribe input:last-child {
 		max-width: 200px;
 	}
-	.no_medium {
-		display: none;
-	}
+	
 
 	.no_small {
 		display: block;
+	}
+
+	.no_from_medium {
+		display: none;
 	}
 
 	body {
@@ -129,10 +157,46 @@
 }
 
 @media screen and (min-width: 900px) {
+	.no_medium {
+		display: block;
+	}
+	
 	.flex_med {
+		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
 		justify-content: space-around;
+	}
+
+	.services_lower {
+	display: flex;
+}
+
+.services_lower > div {
+	width: 50%;
+}
+
+	[class^=sellingpoint_] {
+		width: 50%;		
+	}
+
+	[class^=sellingpoint_] .icon {
+		margin-bottom: 0;
+	}
+
+	[class^=sellingpoint_] .text {
+		padding: 2em;
+	}
+
+	[class^=sellingpoint_] svg {
+		width: 40px;
+		height: 40px;
+	}
+
+	[class^=sellingpoint_] p {
+		font-size: 22px;
+		line-height: 35px;
+		letter-spacing: 1px;
 	}
 
 	.upper_footer > div {
@@ -166,6 +230,31 @@
 @media screen and (min-width: 1100px) {
 	.showcase {
 		height: 550px;
+	}
+
+	[class^=sellingpoint_] {
+		margin-top: 4em;
+		width: 25%;		
+	}
+
+	[class^=sellingpoint_] .text {
+		padding: 1em 0;
+		margin: 0 1em;
+	}
+
+	[class^=sellingpoint_] h2 {
+		font-size: 1em;
+		line-height: 40px;
+	}
+
+	[class^=sellingpoint_] p {
+		font-size: 16px;
+		line-height: 26px;
+	}
+
+	.services_range {
+		max-width: 1100px;
+		margin: 0 auto;
 	}
 
 	.business_info h2 {
